added a condition for winning the game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img id="sound" src="images/sound.png">
 
       </div>
-      <div class="picContainer">
+      <div class="picContainer" id="mainContainer">
         <img src="images/ten.jpg" alt="ten" onclick="play(this)" draggable="false">
         <img src="images/eight.jpg" alt="eight" onclick="play(this)" draggable="false">
         <img src="images/one.jpg" alt="one" onclick="play(this)" draggable="false">
